--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,2 @@
-<app-navigation-bar [exampleText]=exampleText (change)="changeView($event)"></app-navigation-bar>
-
-<table-view *ngIf="!displayView" (tableChange)="updateNavBar($event)"></table-view>
-<app-list-view *ngIf="displayView" (selected)="updateNavBar($event)"></app-list-view> 
+<app-navigation-bar></app-navigation-bar>
+<router-outlet></router-outlet>
