--- a/src/app/table-panel/table-panel.component.html
+++ b/src/app/table-panel/table-panel.component.html
@@ -2,10 +2,11 @@
     <div id="imageContainer" ><img src={{model.imgUrl}} ></div>
     <div id="info" >
         <ul>
-            <li>Name: {{model.name}}</li>
-            <li>Surname: {{model.surname}}</li>
-            <li>Age: {{model.age}}</li>
-            <li>Job: {{model.job}}</li>
+            <li>Title: {{model.title}}</li>
+            <li>Type: {{model.type}}</li>
+            <li>Date: {{model.date|date}}</li>
+            <li>Place: {{model.location}}</li>
+            <li>Info: {{model.info}}</li>
         </ul>
     </div>
 </div>
