--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,26 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">{{title}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-    aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <button id="tableBtn" (click)="displayView($event)">
+  <div  data-target="#navbarNav" class="collapse navbar-collapse">
+    <ul class="nav navbar-nav mr-auto">
+      <li class="nav-item mx-2" routerLinkActive="active current">
+        <a class="nav-link" routerLink="/table">
           <fa-icon [icon]="tableIcon"></fa-icon>
           Table
-        </button>
-      </li>
-      <li class="nav-item">
-        <button id="listBtn" (click)="displayView($event)">
+        </a></li>
+      <li class="nav-item mx-2" routerLinkActive="active current">
+        <a class="nav-link" routerLink="/list">
           <fa-icon [icon]="listIcon"></fa-icon>List
-        </button>
+        </a>
       </li>
-      </ul>
+      <li class="nav-item mx-2" routerLinkActive="active current">
+        <a class="nav-link" routerLink="/create">
+          <fa-icon [icon]="plusIcon"></fa-icon>Add
+        </a>
+      </li>
+    </ul>
+  </div>
        {{exampleText}}
     
-  </div>
+  
 </nav>
 <br>
 
