--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+#detail{
+    padding: 10px 10px;
+}
+#mainContainer{
+    margin: 20px 20px;
+    padding: 20px 20px;
+}
+a{
+    color: black;
+}
+body{padding:20px;}
+.form-control.ng-invalid.ng-touched.ng-invalid{
+    border: 2px solid red;
+}
