--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -11,6 +11,7 @@
             <th scope="col">Info</th>
             <th scope="col">Location</th>
             <th scope="col">Date</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
