--- a/src/app/form-create/form-create.component.html
+++ b/src/app/form-create/form-create.component.html
@@ -1,29 +1,33 @@
 BEKA
-<div id="mainContainer" >
-<form [formGroup]="form" class='formGroup' (ngSubmit)="SendRequest()">
-    <div class="form-group" >
-        <div *ngIf="!isHidden">
-        <label for="eventId">Id:</label><br>
-        <input formControlName="eventIdControl" id="eventId" type="number" class="form-control" >
+<div id="mainContainer">
+    <form [formGroup]="form" class='formGroup' (ngSubmit)="SendRequest()">
+        <div class="form-group">
+            <div *ngIf="!isHidden">
+                <label for="eventId">Id:</label><br>
+                <input formControlName="eventIdControl" id="eventId" type="number" class="form-control">
+            </div>
+            <span style="color:red;" *ngIf="message">{{message}}</span>
+            <input formControlName="eventImageControl" #file type="file" accept='image/*' (change)="preview(file.files)" />
+            <img [src]="imgURL" height="200" *ngIf="imgURL">
+
+            <label for="title">title</label><br>
+            <input formControlName="eventTitleControl" id="title" type="text" class="form-control">
+
+            <label for="eventDate">Date</label><br>
+            <input formControlName="eventDateControl" id="eventDate" type="date" class="form-control">
+
+            <label for="evnetLocation">Location</label><br>
+            <input formControlName="eventLocationControl" id="eventLocation" type="text" class="form-control">
+
+            <label for="evetType">Type</label><br>
+            <input formControlName="eventTypeControl" id="eventType" type="text" class="form-control">
+
+            <label for="info">Info</label><br>
+            <textarea formControlName="eventInfoControl" id="info" type="image" class="form-control"></textarea>
         </div>
-        <label for="title">title</label><br>
-        <input formControlName="eventTitleControl" id="title" type="text" class="form-control" >
-
-        <label for="eventDate">Date</label><br>
-        <input formControlName="eventDateControl" id="eventDate" type="date" class="form-control" >
-
-        <label for="evnetLocation">Location</label><br>
-        <input formControlName="eventLocationControl" id="eventLocation" type="text" class="form-control" >
-
-        <label for="evetType">Type</label><br>
-        <input formControlName="eventTypeControl" id="eventType" type="text" class="form-control">
-
-        <label for="info">Info</label><br>
-        <textarea formControlName="eventInfoControl" id="info" type="image" class="form-control" ></textarea>
-    </div>
-    <br>
-    <button [disabled]="!form.valid" class="btn btn-primary" type="submit">Sign Up</button>
-</form>
+        <br>
+        <button [disabled]="!form.valid" class="btn btn-primary" type="submit">Sign Up</button>
+    </form>
     <button (click)="createForm()" [hidden]="Edit">Edit</button>
 </div>
 {{edit}}
