--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -5,7 +5,7 @@
         <label>Name:{{ model.info }}</label><br>
         <label>Name:{{ model.location }}</label><br>
         <textarea  disabled > model</textarea>
-        <app-form-create [model]="model" [edit]="true"></app-form-create>
+        <app-form-create></app-form-create>
     </div>
-    <app-form-create [model]="model" [edit]="true"></app-form-create>
+    <app-form-create ></app-form-create>
 </div>
