--- a/src/app/table-view/table-view.component.html
+++ b/src/app/table-view/table-view.component.html
@@ -1,7 +1,7 @@
 <div id="mainContainer">
    
    <table-panel *ngFor="let model of ListOfEvents" [model]="model"
-      (change)="updateClick($event)"></table-panel>
+      (change)="updateList($event)"></table-panel>
    <br clear="both">
 
 </div>
