--- a/src/app/list-view/list-view.component.html
+++ b/src/app/list-view/list-view.component.html
@@ -15,13 +15,16 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of list" (click)="RowSelected(user);">
-            <td><img [src]="user.img" class="img-fluid img-thumbnail" width="70px"></td>
-            <td>{{user.title}}</td>
-            <td>{{user.type}}</td>
-            <td>{{user.info}}</td>
-            <td>{{user.location}}</td>
-            <td>{{user.date|date}}</td>
+        <tr *ngFor="let model of list" (click)="RowSelected(model);">
+            <td><img [src]="model.img" class="img-fluid img-thumbnail" width="70px"></td>
+            <td>{{model.title}}</td>
+            <td>{{model.type}}</td>
+            <td>{{model.info}}</td>
+            <td>{{model.location}}</td>
+            <td>{{model.date|date}}</td>
+            <td><button class="btn btn-dark mr-2"(click)="editModel(model)">Edit</button>
+                <button class="btn btn-dark " (click)="deleteModel(model)">Delete</button></td>
+
         </tr>
     </tbody>
 </table>
