--- a/src/app/table-panel/table-panel.component.html
+++ b/src/app/table-panel/table-panel.component.html
@@ -8,8 +8,8 @@
             <li>Place: {{model.location}}</li>
             <li>Info: {{model.info}}</li>
         </ul>
-        <button (click)="editModel()">Edit</button>
-        <button (click)="deleteModel()">Delete</button>
+        <button  class="btn btn-dark mr-2" (click)="editModel()">Edit</button>
+        <button  class="btn btn-dark mr-2" (click)="deleteModel()">Delete</button>
         <!-- <button (click)="deleteModel()">Delete</button> -->
     </div>
 </div>
