--- a/src/app/edit-form/edit-form.component.html
+++ b/src/app/edit-form/edit-form.component.html
@@ -10,7 +10,7 @@ Edit
             <input formControlName="eventImageControl" #file type="file" accept='image/*' (change)="preview(file.files)" class="form-control"/>
             <img [src]="imgURL" height="200" *ngIf="imgURL">
             <br>
-            <label for="title">title</label><br>
+            <label for="title">Title</label><br>
             <input formControlName="eventTitleControl" id="title" type="text" class="form-control">
 
             <label for="eventDate">Date</label><br>
