zad2 final version

--- a/src/app/form-create/form-create.component.html
+++ b/src/app/form-create/form-create.component.html
@@ -26,6 +26,6 @@ Create
             <textarea formControlName="eventInfoControl" id="info" type="image" class="form-control"></textarea>
         </div>
         <br>
-        <button [disabled]="!form.valid" class="btn btn-primary" type="submit">Sign Up</button>
+        <button [disabled]="!form.valid" class="btn btn-primary" type="submit">Confirme</button>
     </form>
 </div>
