--- a/src/app/table-view/table-view.component.html
+++ b/src/app/table-view/table-view.component.html
@@ -1,3 +1,4 @@
+<app-filter  [(eventList)]="listOfEvents"></app-filter>
 <div id="mainContainer">
    
    <table-panel *ngFor="let model of pageOfItems" [model]="model"
